# authmcp-gateway

./: .env.example  .env.example.pypi  .gitignore  AGENTS.md  AUDIT_REPORT.md  CHANGELOG.md  CLAUDE.md  Dockerfile  JINJA2_MIGRATION_CHECKLIST.md  MANIFEST.in  NEXT_STEPS.md  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  requirements.txt  tailwind.config.js  test_login.html
docs/: 4PDA_POST.md  API.md  DEPLOYMENT.md  LINKEDIN_POST.md  LOGGING.md  PUBLISHING.md  README.md  RELEASE.md  SECURITY_TESTING.md
docs/archive/: README_OLD.md
examples/: connect-rag-server.md  tailwind-color-preview.html
scripts/: codex-refresh  codex_refresh_mcp.py  deploy-wiki.sh  migrate_add_refresh_tokens.py  publish.sh  test_mcp_security.py  test_mcp_security.sh
src/authmcp_gateway/: __init__.py  admin_auth.py  app.py  cli.py  config.py  csrf.py  db.py  logging_config.py  middleware.py  rate_limiter.py  settings_manager.py  setup_wizard.py  utils.py
src/authmcp_gateway/admin/: login.py  logs_api.py  mcp_activity_api.py  mcp_servers_api.py  mcp_tokens_api.py  routes.py  settings_api.py  user_api.py  user_pages.py
src/authmcp_gateway/auth/: authorize_endpoint.py  client_store.py  dcr_endpoints.py  endpoints.py  jwt_handler.py  models.py  oauth_code_flow.py  password.py  token_service.py  user_store.py
src/authmcp_gateway/mcp/: crypto.py  handler.py  health.py  models.py  proxy.py  sse_handler.py  store.py  token_manager.py  token_refresher.py
src/authmcp_gateway/security/: __init__.py  logger.py  mcp_auditor.py
src/authmcp_gateway/static/: input.css
src/authmcp_gateway/templates/: base_shell.html  user_login.html  user_portal.html
src/authmcp_gateway/templates/admin/: api_test.html  base.html  dashboard.html  logs.html  mcp_activity.html  mcp_audit.html  mcp_servers.html  mcp_tokens.html  oauth_clients.html  security_logs.html  settings.html  users.html
src/authmcp_gateway/templates/admin.bootstrap-backup/: api_test.html  base.html  dashboard.html  mcp_tokens.html  users.html
src/fastmcp_auth/: __init__.py  admin_auth.py  app.py  cli.py  config.py  middleware.py  setup_wizard.py  utils.py
src/fastmcp_auth/admin/: routes.py
src/fastmcp_auth/auth/: authorize_endpoint.py  endpoints.py  jwt_handler.py  oauth_code_flow.py  password.py  user_store.py
src/fastmcp_auth/mcp/: __init__.py  handler.py  health.py  models.py  proxy.py  store.py
templates/admin/: api_test.html  base.html  dashboard.html  logs.html  mcp_servers.html  mcp_tokens.html  security_logs.html  settings.html  users.html
templates/admin.bootstrap-backup/: mcp_servers.html  settings.html
tests/: test_csrf.py  test_log_cleanup.py  test_mcp_logging.py  test_token_manager.py
